--- a/EngineeringMultitool/app/src/main/res/menu/activity_main_drawer.xml
+++ b/EngineeringMultitool/app/src/main/res/menu/activity_main_drawer.xml
@@ -7,7 +7,7 @@
             android:icon="@drawable/ic_menu_camera"
             android:title="Home" />
         <item
-            android:id="@+id/nav_callipers"
+            android:id="@+id/nav_calipers"
             android:icon="@drawable/ic_menu_gallery"
             android:title="Calipers" />
         <item
